--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   ><sup>2</sup>&nbsp;&nbsp;&nbsp;
                   <a target="_blank" href="https://www.egr.msu.edu/~yukong/"
                     >Yu Kong</a
-                  ><sup>2</sup>&nbsp;&nbsp;&nbsp; <br /><sup>1</sup>Michigan
+                  ><sup>1</sup>&nbsp;&nbsp;&nbsp; <br /><sup>1</sup>Michigan
                   State
                   University&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>2</sup>Arizona
                   State
@@ -222,18 +222,18 @@
                 </div>
               </div>
             </div>
-            <div class="column" style="text-align: center">
-              <img
+            <!-- <div class="column" style="text-align: center"> -->
+            <!-- <img
                 src="resources/FABA-Instruct.png"
                 alt="FABA-Instruct Image"
                 width="60%"
-              />
-            </div>
-            <br />
-            <br />
-            <h2 class="subtitle is-4" style="text-align: center">
-              FABA-Instruct Statistic
-            </h2>
+              /> -->
+            <!-- </div> -->
+            <!-- <br /> -->
+            <!-- <br /> -->
+            <!-- <h2 class="subtitle is-4" style="text-align: center"> -->
+            <!-- FABA-Instruct Statistic -->
+            <!-- </h2> -->
             <div class="columns is-centered">
               <div class="column is-full" style="text-align: center">
                 <img
@@ -256,50 +256,90 @@
                 <br />
               </div>
             </div>
-            <div class="columns is-centered">
-              <div class="column is-three-quarters">
-                <h2 class="subtitle is-4" style="text-align: center">
-                  Some examples from dataset
-                </h2>
-                <div class="columns is-centered">
-                  <div class="column is-centered">
-                    <img
-                      class="center"
-                      src="./resources/emotion_example.png"
-                      width="100%"
-                      style="border-radius: 10px"
-                    />
-                    <p style="text-align: center; font-size: 18px">
-                      Emotion description analysis. Emotion descriptions can
-                      express comprehensive emotion types like compositional
-                      emotions, exaggerated emotions, the degree of emotions,
-                      and undefined emotions, etc. In contrast, emotion
-                      categories struggle to capture such complex and nuanced
-                      emotional states.
-                    </p>
-                  </div>
-                  <div class="column is-centered">
-                    <img
-                      class="center"
-                      src="./resources/AU_example.png"
-                      width="100%"
-                      style="border-radius: 10px"
-                    />
-                    <p style="text-align: center; font-size: 18px">
-                      AU description analysis. AU descriptions give not only the
-                      AU labels, but also provide explanations on the cause
-                      (which muscle movement) and effect (which emotion it will
-                      lead to) w.r.t. each AU, and the relationship between
-                      current AU and other AUs or emotions.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
     </section>
+    <div class="slideshow-container" style="width: 55%; margin-top: 30px">
+      <div class="mySlides0">
+        <div class="card">
+          <h2 class="title is-4">Some examples from FABA-Instruct</h2>
+          <p>
+            <img
+              src="./resources/example2.png"
+              alt="Example 2"
+              style="height: auto"
+            />
+          </p>
+        </div>
+      </div>
+
+      <div class="mySlides0">
+        <div class="card">
+          <h2 class="title is-4">Some examples from FABA-Instruct</h2>
+          <p>
+            <img
+              src="./resources/example3.png"
+              alt="Example 3"
+              style="height: auto"
+            />
+          </p>
+        </div>
+      </div>
+
+      <div class="mySlides0">
+        <div class="card">
+          <h2 class="title is-4">Some examples from FABA-Instruct</h2>
+          <p>
+            <img
+              src="./resources/example4.png"
+              alt="Example 4"
+              style="height: auto"
+            />
+          </p>
+        </div>
+      </div>
+
+      <div class="mySlides0">
+        <div class="card">
+          <h2 class="title is-4">Some examples from FABA-Instruct</h2>
+          <p>
+            <img
+              src="./resources/example7.png"
+              alt="Example 7"
+              style="height: auto"
+            />
+          </p>
+        </div>
+      </div>
+
+      <div class="mySlides0">
+        <div class="card">
+          <h2 class="title is-4">Some examples from FABA-Instruct</h2>
+          <p>
+            <img
+              src="./resources/example5.png"
+              alt="Example 5"
+              style="height: auto"
+            />
+          </p>
+        </div>
+      </div>
+
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(0, -1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(0, 1)">&#10095;</a>
+    </div>
+    <br />
+
+    <!-- The dots/circles -->
+    <div style="text-align: center">
+      <span class="dot0" onclick="currentSlide(0, 1)"></span>
+      <span class="dot0" onclick="currentSlide(0, 2)"></span>
+      <span class="dot0" onclick="currentSlide(0, 3)"></span>
+      <span class="dot0" onclick="currentSlide(0, 4)"></span>
+      <span class="dot0" onclick="currentSlide(0, 5)"></span>
+    </div>
 
     <section class="section" style="width: 100%; margin: 0 auto">
       <div class="container">
@@ -328,7 +368,7 @@
               <div class="column is-three-quarters has-text-centered">
                 <div class="interpolation-panel">
                   <div class="content">
-                    <p style="font-size: 18px">
+                    <p style="font-size: 18px; text-align: left">
                       The EmoLA model enhances facial expression analysis
                       through instruction tuning, improving recognition of
                       facial action units (AUs) and emotions. It combines
@@ -344,41 +384,138 @@
         </div>
       </div>
     </section>
-    <section class="section">
+
+    <section class="section" style="width: 100%; margin: 0 auto">
       <div class="container">
         <div class="columns is-centered">
-          <div class="column is-three-quarters">
-            <h3
-              class="title is-3"
+          <div class="column is-full-width">
+            <h1
+              class="title is-2"
               style="text-align: center; padding-bottom: 10px"
             >
-              <strong>State-of-the-art Results</strong>
-            </h3>
-            <div class="columns">
-              <div class="column">
+              New Benchmark – FABA-Bench
+            </h1>
+            <div class="columns is-centered">
+              <div class="column is-three-quarters">
                 <img
-                  src="./resources/RAF-DB.png"
-                  alt="Affordance Action Space"
-                  style="border-radius: 1px; width: 100%"
+                  src="resources/FABA-Bench.png"
+                  alt="FABA-Bench"
+                  style="
+                    border: 1px solid rgb(93, 92, 92);
+                    border-radius: 10px;
+                    width: 100%;
+                  "
                 />
               </div>
-              <div class="column">
-                <img
-                  src="./resources/DISFA.png"
-                  alt="Action Space Results"
-                  style="border-radius: 10px; width: 80%"
-                />
-                <img
-                  src="./resources/BP4D.png"
-                  alt="Action Space Results"
-                  style="border-radius: 10px; width: 80%"
-                />
+            </div>
+            <div class="columns is-centered">
+              <div class="column is-three-quarters has-text-centered">
+                <div class="interpolation-panel">
+                  <div class="content">
+                    <p style="font-size: 18px; text-align: left">
+                      FABA-Bench is a new benchmark introduced for the
+                      evaluation of models in Facial Affective Behavior Analysis
+                      (FABA). This benchmark is designed to assess both the
+                      <strong>recognition</strong> and
+                      <strong>generation</strong> capabilities of models on
+                      instruction-following data. The key metric used in
+                      FABA-Bench is the <strong>REGE score</strong> (Recognition
+                      and Generation Evaluation), which combines recognition
+                      accuracy with the quality of text generation. FABA-Bench
+                      provides a comprehensive evaluation framework that
+                      highlights the strengths and weaknesses of different
+                      models in understanding and generating descriptions for
+                      complex facial affective behaviors.
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <section class="section" style="width: 85%; margin: 0 auto">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-full-width">
+            <h1
+              class="title is-2"
+              style="text-align: center; padding-bottom: 10px"
+            >
+              State-of-the-art Results
+            </h1>
+            <div
+              class="slideshow-container"
+              style="width: 55%; margin-top: 30px"
+            >
+              <div class="mySlides1">
+                <div class="card">
+                  <p>
+                    <img
+                      src="./resources/RAF-DB.png"
+                      alt="RAF-DB"
+                      style="height: auto"
+                    />
+                  </p>
+                </div>
+              </div>
+
+              <div class="mySlides1">
+                <div class="card">
+                  <p>
+                    <img
+                      src="./resources/DISFA.png"
+                      alt="DISFA"
+                      style="height: auto"
+                    />
+                  </p>
+                </div>
+              </div>
+
+              <div class="mySlides1">
+                <div class="card">
+                  <p>
+                    <img
+                      src="./resources/BP4D.png"
+                      alt="BP4D"
+                      style="height: auto"
+                    />
+                  </p>
+                </div>
+              </div>
+
+              <div class="mySlides1">
+                <div class="card">
+                  <p>
+                    <img
+                      src="./resources/GFT.png"
+                      alt="GFT"
+                      style="height: auto"
+                    />
+                  </p>
+                </div>
+              </div>
+
+              <!-- Next and previous buttons -->
+              <a class="prev" onclick="plusSlides(1, -1)">&#10094;</a>
+              <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+            </div>
+            <br />
+
+            <!-- The dots/circles -->
+            <div style="text-align: center">
+              <span class="dot0" onclick="currentSlide(1, 1)"></span>
+              <span class="dot0" onclick="currentSlide(1, 2)"></span>
+              <span class="dot0" onclick="currentSlide(1, 3)"></span>
+              <span class="dot0" onclick="currentSlide(1, 4)"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="section" id="BibTeX">
       <div class="container is-max-desktop content">
         <h2 class="title">BibTeX</h2>
@@ -392,16 +529,87 @@
     </section>
     <footer class="footer">
       <div class="container">
-        <div class="content has-text-centered">
-          <br />
-          <p>
-            Template from
-            <a href="https://nerfies.github.io"
-              ><span class="dnerf">Nerfies</span></a
-            >.
-          </p>
+        <div class="columns is-centered">
+          <div class="column is-8">
+            <div class="content">
+              <p>
+                This website is licensed under a
+                <a
+                  rel="license"
+                  href="http://creativecommons.org/licenses/by-sa/4.0/"
+                  >Creative Commons Attribution-ShareAlike 4.0 International
+                  License</a
+                >.
+              </p>
+              <p>
+                Website source code based on the
+                <a href="https://github.com/nerfies/nerfies.github.io"
+                  >Nerfies</a
+                >
+                project page and
+                <a href="https://luckyhzt.github.io/unicolor">UniColor</a>
+                project page.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
+
+    <script src="http://code.jquery.com/jquery.js"></script>
+
+    <!-- Fancybox -->
+    <script src="fancybox/fancybox.umd.js"></script>
+    <script>
+      Fancybox.bind("[data-fancybox]", {
+        infinite: false,
+        Thumbs: {
+          autoStart: false,
+        },
+      });
+    </script>
+
+    <!-- Javascript Functions -->
+    <script type="text/javascript">
+      let slideIndex = [1, 1];
+      let slideId = 0;
+      showSlides(slideId, slideIndex[slideId]);
+      showSlides(1, slideIndex[1]);
+
+      // Next/previous controls
+      function plusSlides(id, n) {
+        showSlides(id, (slideIndex[id] += n));
+      }
+
+      // Thumbnail image controls
+      function currentSlide(id, n) {
+        showSlides(id, (slideIndex[id] = n));
+      }
+
+      function showSlides(id, n) {
+        let i;
+        let slides = document.getElementsByClassName("mySlides" + id);
+        let dots = document.getElementsByClassName("dot" + id);
+        if (n > slides.length) {
+          slideIndex[id] = 1;
+        }
+        if (n < 1) {
+          slideIndex[id] = slides.length;
+        }
+        for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex[id] - 1].style.display = "block";
+        dots[slideIndex[id] - 1].className += " active";
+      }
+
+      // Automatic slideshow
+      setInterval(() => {
+        plusSlides(0, 1);
+      }, 150000); // Change image every 5 seconds
+    </script>
   </body>
 </html>
