--- a/index.html
+++ b/index.html
@@ -137,15 +137,17 @@
     <section class="hero teaser">
       <div class="container is-max-desktop">
         <div class="hero-body">
-          <div align="center">
+          <div align="left">
             <img src="resources/intro2.png" alt="Intro Image" />
           </div>
           <br />
           <h2 class="subtitle has-text-centered">
-            <strong>FABA-Instruct</strong> can provide finegrained
-            <strong>emotion</strong> and <strong>AU</strong> descriptions, which
-            not only include the reasoning process about the facial movements
-            but also present the inference to the emotion.
+            <p style="text-align: left">
+              <strong>FABA-Instruct</strong> can provide finegrained
+              <strong>emotion</strong> and <strong>AU</strong> descriptions,
+              which not only include the reasoning process about the facial
+              movements but also present the inference to the emotion.
+            </p>
           </h2>
         </div>
       </div>
@@ -246,7 +248,7 @@
                 <div class="columns is-centered has-text-centered">
                   <div class="column is-two-thirds">
                     <div class="content has-text-justified interpolation-panel">
-                      <p style="text-align: center; font-size: 18px">
+                      <p style="text-align: left; font-size: 18px">
                         The distribution of FABA-Instruct on AU (a) and emotion
                         (b) tasks, and the word clouds (c).
                       </p>
@@ -268,7 +270,7 @@
             <img
               src="./resources/example2.png"
               alt="Example 2"
-              style="height: auto"
+              style="height: 150px; width: 600px"
             />
           </p>
         </div>
@@ -281,7 +283,7 @@
             <img
               src="./resources/example3.png"
               alt="Example 3"
-              style="height: auto"
+              style="height: 150px; width: 600px"
             />
           </p>
         </div>
@@ -294,7 +296,7 @@
             <img
               src="./resources/example4.png"
               alt="Example 4"
-              style="height: auto"
+              style="height: 150px; width: 600px"
             />
           </p>
         </div>
@@ -307,7 +309,7 @@
             <img
               src="./resources/example7.png"
               alt="Example 7"
-              style="height: auto"
+              style="height: 150px; width: 600px"
             />
           </p>
         </div>
@@ -320,7 +322,7 @@
             <img
               src="./resources/example5.png"
               alt="Example 5"
-              style="height: auto"
+              style="height: 150px; width: 600px"
             />
           </p>
         </div>
@@ -456,7 +458,7 @@
                     <img
                       src="./resources/RAF-DB.png"
                       alt="RAF-DB"
-                      style="height: auto"
+                      style="height: 500px; width: 700px"
                     />
                   </p>
                 </div>
@@ -468,7 +470,7 @@
                     <img
                       src="./resources/DISFA.png"
                       alt="DISFA"
-                      style="height: auto"
+                      style="height: 500px; width: 700px"
                     />
                   </p>
                 </div>
@@ -480,7 +482,7 @@
                     <img
                       src="./resources/BP4D.png"
                       alt="BP4D"
-                      style="height: auto"
+                      style="height: 500px; width: 700px"
                     />
                   </p>
                 </div>
@@ -492,7 +494,7 @@
                     <img
                       src="./resources/GFT.png"
                       alt="GFT"
-                      style="height: auto"
+                      style="height: 500px; width: 700px"
                     />
                   </p>
                 </div>
