--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
               class="title is-2"
               style="text-align: center; padding-bottom: 10px"
             >
-              State-of-the-art Results
+              Results on Traditional FABA benchmarks
             </h1>
             <div
               class="slideshow-container"
