update new figure and dataset

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
                   </span>
                   <span class="link-block">
                     <a
-                      href="#"
+                      href="https://drive.google.com/file/d/1DiKYcakkY3cmNSMvydLgeI4xWMwTsX77/view?usp=share_link"
                       class="external-link button is-normal is-rounded is-dark"
                     >
                       <span class="icon">
                         <i class="fa fa-database"></i>
                       </span>
-                      <span>Dataset (Coming Soon)</span>
+                      <span>Dataset</span>
                     </a>
                   </span>
                 </div>
@@ -542,7 +542,7 @@
             <div class="columns is-centered">
               <div class="column is-three-quarters">
                 <img
-                  src="resources/emola_new.png"
+                  src="resources/emola2.0.png"
                   alt="EmoLA Model"
                   style="
                     border: 1px solid rgb(93, 92, 92);
