update new code

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             <div class="columns is-centered">
               <div class="column is-three-quarters">
                 <img
-                  src="resources/FABA-Bench.png"
+                  src="resources/table7-new.png"
                   alt="FABA-Bench"
                   style="
                     border: 1px solid rgb(93, 92, 92);
@@ -718,7 +718,7 @@
         <pre><code>@article{li2024facial,
         title={Facial Affective Behavior Analysis with Instruction Tuning},
         author={Li, Yifan and Dao, Anh and Bao, Wentao and Tan, Zhen and Chen, Tianlong and Liu, Huan and Kong, Yu},
-        journal={arXiv preprint arXiv:2404.05052},
+        journal={European Conference on Computer Vision (ECCV) 2024},
         year={2024}
 }</code></pre>
       </div>
