update new code

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             <div class="columns is-centered">
               <div class="column is-three-quarters">
                 <img
-                  src="resources/table7-new.png"
+                  src="resources/Table7.png"
                   alt="FABA-Bench"
                   style="
                     border: 1px solid rgb(93, 92, 92);
