--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <div class="container is-max-desktop">
         <div class="hero-body">
           <div align="left">
-            <img src="resources/intro3.gif" alt="Intro Image" />
+            <img src="resources/emola-2.gif" alt="Intro Image" />
           </div>
           <br />
           <h2 class="subtitle has-text-centered">
@@ -723,6 +723,23 @@
 }</code></pre>
       </div>
     </section>
+    <section class="section" id="NSF_Acknowledgement">
+      <div class="container">
+        <div class="columns">
+          <div class="column is-full-width">
+            <h2 class="title is-5">NSF Acknowledgement</h2>
+            <p style="font-size: 0.8rem">
+              This material is based upon work supported by the National Science
+              Foundation (NSF) under Grant No. 1949694 and 2040209. Any
+              opinions, findings, and conclusions or recommendations expressed
+              in this material are those of the author(s) and do not necessarily
+              reflect the views of the National Science Foundation.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="footer">
       <div class="container">
         <div class="columns is-centered">
