--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   </span>
                   <span class="link-block">
                     <a
-                      href="#"
+                      href="https://github.com/JackYFL/EmoLA"
                       class="external-link button is-normal is-rounded is-dark"
                     >
                       <span class="icon">
@@ -113,7 +113,7 @@
                           ></path>
                         </svg>
                       </span>
-                      <span>Code (Coming Soon)</span>
+                      <span>Code</span>
                     </a>
                   </span>
                   <span class="link-block">
