--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   </span>
                   <span class="link-block">
                     <a
-                      href="https://drive.google.com/file/d/1DiKYcakkY3cmNSMvydLgeI4xWMwTsX77/view?usp=share_link"
+                      href="https://drive.google.com/file/d/1lbgtgEuFKltXleRjJJow6WzfYpBWFlAl/view?usp=drive_link"
                       class="external-link button is-normal is-rounded is-dark"
                     >
                       <span class="icon">
